--- a/report.bib
+++ b/report.bib
@@ -625,7 +625,7 @@ journal = "Information Fusion",
 volume = "12",
 number = "1",
 pages = "58 - 69",
-year = "2011",
+year = "2010",
 note = "Special Issue on Intelligent Transportation Systems",
 issn = "1566-2535",
 doi = "10.1016/j.inffus.2010.01.004",
@@ -640,6 +640,14 @@ keywords = "Laser radar data fusion"
 }
 
 %There exists no eletronic version
+
+@phdthesis{coue,
+ author = {Coue Christophe},
+ title = {Modele bayesien pour l’analyse multimodale d’environnements dynamiques et encombres : Application l’assistance la conduite en milieu urbain},
+ year = {2012},
+ publisher = {INPG},
+ address = {Grenoble, FR},
+} 
 
 @article{DBLP:journals/inffus/VuBA11,
   author    = {Trung-Dung Vu and
