--- a/trunk/report.bib
+++ b/trunk/report.bib
@@ -641,10 +641,10 @@ keywords = "Laser radar data fusion"
 
 %There exists no eletronic version
 
-@phdthesis{coue,
+@phdthesis{coue2003,
  author = {Coue Christophe},
  title = {Modele bayesien pour l’analyse multimodale d’environnements dynamiques et encombres : Application l’assistance la conduite en milieu urbain},
- year = {2012},
+ year = {2003},
  publisher = {INPG},
  address = {Grenoble, FR},
 } 
