--- a/trunk/presentation/presentation.tex
+++ b/trunk/presentation/presentation.tex
@@ -225,6 +225,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{State of the art}
 
+\subsection*{State of the art}
+
 	\begin{frame}
 		\frametitle{State of the art}
 		
@@ -256,6 +258,8 @@
 
 \section{Motion detection}
 
+\subsection*{Motion detection algorithm}
+
 	\begin{frame}
 		\frametitle{Solution overview}
 		\begin{figure}[h]
@@ -276,7 +280,6 @@
 		\end{alertblock}
 	\end{frame}
 
-\subsection{Motion detection algorithm}
 
 	\begin{frame}
 		\frametitle{Experimental Platform}
