adding changes of mathias

--- a/report.bib
+++ b/report.bib
@@ -642,7 +642,7 @@ keywords = "Laser radar data fusion"
 %There exists no eletronic version
 
 @phdthesis{coue2003,
- author = {Coue Christophe},
+ author = {Christophe Coue},
  title = {Modele bayesien pour l’analyse multimodale d’environnements dynamiques et encombres : Application l’assistance la conduite en milieu urbain},
  year = {2003},
  publisher = {INPG},
