--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -33,9 +33,8 @@
 		\begin{columns}[t]
 		  \begin{column}{5cm}
 			\begin{exampleblock}{Stands for}	
-				Advanced Driver Assistance Systems, cope with vehicle handling tasks
-				
-				Intelligent Transportation Systems
+				Advanced Driver Assistance Systems, vehicle participate in driving tasks
+
 			\end{exampleblock}		
 			\begin{block}{Goal}
 				\begin{itemize}
@@ -61,7 +60,6 @@
 		
 		\begin{columns}[t]
 		  \begin{column}{6cm}
-
 			\begin{block}{Sensors}
 					The means of perceiving the environment based on physical properties (cameras, lasers, etc.)
 			\end{block}		
@@ -70,10 +68,13 @@
 					The process of acquiring knowledge about the environment \cite{iyengar1991autonomous}
 			\end{block}		
 
-			\begin{block}{Risk estimation}
-					Evaluate the state space and assess the safety of the movement
+			\begin{block}{Risk assessment}
+					Evaluate the potential danger in a given time horizon
 			\end{block}				  
 
+			\begin{block}{Decision}
+					Dispatch the action to mitigate the risks
+			\end{block}		
 		  
 		  \end{column}
 		  
@@ -85,7 +86,7 @@
 		  \end{column}
 		 \end{columns}		
 		
-
+	\end{frame}
 		
 		%\begin{exampleblock}{SLAM}		
 		%	\begin{quotation}
@@ -99,11 +100,51 @@
 %			\end{quotation}				
 %		\end{exampleblock}						
 				
-	\end{frame}
+
+
+
+	\begin{frame}
+		\frametitle{Perception}
+	
+			\begin{block}{Definition}
+				the process of getting information from the environment using sensors
+			\end{block}	
+	
+		  \begin{columns}[t]
+		  \begin{column}{4cm}
+		  	\small
+			\begin{exampleblock}{SLAM}		
+		
+			\begin{itemize}
+			\item Localization
+			\item Mapping
+			\end{itemize}			
+			
+			\end{exampleblock}					
+				
+		\begin{exampleblock}{DATMO}		
+			\begin{itemize}
+			\item Moving objects: Detection and Tracking
+			\end{itemize}			
+		\end{exampleblock}	
+
+		  \end{column}
+		  
+		  \begin{column}{6cm}
+			\begin{figure}[h]
+			\center
+			\includegraphics[scale=0.3]{img/perception}
+			\end{figure}	
+		  \end{column}
+		 \end{columns}		 	
+			
+	
+	\end{frame}	
+	
 	
 	\begin{frame}
 		\frametitle{Problem statement - BOF overview}
-	
+	\small
 		  \begin{columns}[t]
 		  \begin{column}{5cm}
 			\begin{figure}[h]
@@ -135,20 +176,23 @@
 			\includegraphics[scale=0.3]{img/bof}
 		\end{figure}	
 		  \end{column}
-		 \end{columns}		
-		
-		
+		 \end{columns}
 		
 	\end{frame}
 
 	\begin{frame}
 		\frametitle{Context - Problem statement}
 
-		BOF calculates velocities as Bayesian inference without using motion sensors
-		
 		\begin{itemize}
-		\item Uses pre-defined range of velocities
-		\item Needs to use the neighborhood for calculating those velocities
+
+		\item BOF calculates velocities without using motion sensors
+			\begin{itemize}
+			\item Uses pre-defined range of velocities
+			\item Needs to use the neighborhood for calculating those velocities
+			\end{itemize}
+
+		\item Risk estimation requires to know the moving objects
+
 		\end{itemize}
 
 		 \begin{alertblock}{Issue}
@@ -157,53 +201,22 @@
 
 		
 	
-		\begin{block}{Problem statement}		
-			How to separate the input data from the laser into dynamic and static parts using information from the motion sensors?
+		\begin{block}{Problem statement}	
+		
+			\begin{itemize}		
+			\item Separate the static and dynamic environment
+			\item Using laser scanner and IMU as sensors
+			\item Compute in real-time (20 miliseconds)
+			\end{itemize}		
 			
-			That can be used for BOF to concentrate its calculations for cells belonging to dynamic parts only.
+			%How to separate the input data from the laser into dynamic and static parts using information from the motion sensors?
+			
+			%That can be used for BOF to concentrate its calculations for cells belonging to dynamic parts only.
 		\end{block}
 		
 	\end{frame}
 
-	\begin{frame}
-		\frametitle{Perception}
-	
-			\begin{block}{Definition}
-				the process of getting information from the environment using sensors
-			\end{block}	
-	
-		  \begin{columns}[t]
-		  \begin{column}{4cm}
-		  	\small
-			\begin{exampleblock}{SLAM}		
-		
-			\begin{itemize}
-			\item Localization
-			\item Mapping
-			\end{itemize}			
-			
-			\end{exampleblock}					
-				
-		\begin{exampleblock}{DATMO}		
-			\begin{itemize}
-			\item Moving objects: Detection and Tracking
-			\end{itemize}			
-			
-		\end{exampleblock}	
-		  \end{column}
-		  
-		  \begin{column}{6cm}
-			\begin{figure}[h]
-			\center
-			\includegraphics[scale=0.3]{img/perception}
-		\end{figure}	
-		  \end{column}
-		 \end{columns}		 	
-	
-					
-	
-	\end{frame}	
-	
+
 %	\begin{frame}
 %		\frametitle{Behavior-based risk estimation}
 		
@@ -264,7 +277,6 @@
 		\frametitle{Solution overview}
 		\begin{figure}[h]
 			\center
-			%\includegraphics[scale=0.5]{img/fig:problem}
 			\includegraphics[scale=0.6]{img/fig:motion:overview:01}
 		 \end{figure}
 		\begin{block}{Goal}
@@ -318,8 +330,6 @@
 
 	\begin{frame}
 		\frametitle{Experimental Platform - laser configuration}	
-
-
 
 		 \begin{columns}[t]
 		  \begin{column}{5cm}
@@ -419,7 +429,7 @@
 
 		  \begin{columns}[t]
 		  \begin{column}{5cm}
-			\begin{block}{Step 2 - Counter update from time $t-1$}		  
+			\begin{block}{Step 2}		  % - Transformation from $OG_{t-1}$ to $OG_{t}$ 
 			\begin{itemize}
 			\item Find position $O_t$ w.r.t $O_{t-1}$, using $\nu_t$, $\omega_t$ and circular motion model
 			\begin{equation}
@@ -445,16 +455,19 @@
 	\begin{frame}
 		\frametitle{Motion Detection algorithm}		
 
+			\begin{block}{Step 3 - Counter updates}		  
+
 			\begin{equation*}
 			OC_t[j] = OC_t[j] + OC_{t-1}[i]
 			\end{equation*}  
 
 			\begin{equation*}
 			FC_t[j] = FC_t[j] + FC_{t-1}[i]
-			\end{equation*}		 		
-
+			\end{equation*}	
+				 		
+			\end{block}
 		
-		\begin{block}{Step 3 - Motion grid}	
+		\begin{block}{Step 4 - Decision module}	
 
 		\begin{equation*}
 			MotionGrid_t[i] = \begin{cases} 1, & \mbox{$OG_t[i] > 0.5$ and} \\ & \mbox {$FC_t[i]>2\;  x \; OC_t[i]$} \\
@@ -462,8 +475,6 @@
 		\end{equation*}		
 				
 		\end{block}		
-		
-
 		
 	\end{frame}
 
@@ -486,7 +497,6 @@
 		\begin{itemize}
 		\item Vehicles in urban area =  low speed + lot of rotation
 		\item Vehicles in motorway = high speed + almost no rotation
-		%\item Vehicle in roundabout
 		\item Vehicle in static scenario
 		\end{itemize}						
 	\end{frame}
@@ -567,7 +577,7 @@
 				\begin{exampleblock}{Positive}
 				\begin{itemize}
 				\item Only few sparse pixels
-				\item Easily removable with filters like:...
+				\item Easily removable with filters like: median filter
 				\end{itemize}
 				\end{exampleblock}		
 			\end{column}
@@ -584,7 +594,7 @@
 	\begin{frame}
 		\frametitle{Run time}
 
-		\begin{alertblock}{Performance}
+		\begin{exampleblock}{Performance}
 			Run in approximately 3.0ms in a 2.67Mhz processor
 		\end{alertblock}		
 		
@@ -597,7 +607,7 @@
 \section{Conclusion}
 
 	\begin{frame}
-		\frametitle{Conclusion and Future work}
+		\frametitle{Conclusion}
 		
 		\begin{block}{Conclusion}
 			\begin{itemize}
@@ -607,22 +617,46 @@
 			\end{itemize}
 		\end{block}		
 		
-		\begin{block}{Future work}
-			\begin{itemize}
-			\item Apply filters to reduce the noise
-			\item Fuse with other sensors information to reduce the IMU data precision dependency
-			\item Integrate into the BOF framework
-			\end{itemize}
+		\begin{block}{ICARCv2012}		
+			Paper submitted with the method
 		\end{block}
+
+	\end{frame}
+
+	\begin{frame}
+		\frametitle{Future work / PhD Proposal}
+
+			\begin{itemize}
+			\item Improve results 
+			
+				\begin{itemize}
+				\item Apply filters to reduce the noise
+				\item Fuse with other sensors information to reduce the IMU data precision dependency
+				\item Probabilistic error modeling
+				\end{itemize}			
+				
+			\item ADAS application
+			
+				\begin{itemize}
+				\item Integrate into the BOF framework
+				\item Clustering and tracking of Moving Objects
+				\item Probabilistic risk estimation
+				\item HMI interface
+				\end{itemize}
+
+			\end{itemize}
 		
 	\end{frame}
 
-	\begin{frame}{Thank you for your attention}
+	\begin{frame}
+		\frametitle{Thank you for your attention}	
+	
 	\begin{alertblock}{}
 		\centering
 		Questions?
 	\end{alertblock}
 	\end{frame} 	
+
  	
 \bibliographystyle{apalike}%abbrvnat%alpha
 \bibliography{../report}{} 	
